fixed issue with fixd header clipping into relative container

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -64,7 +64,6 @@ Container
 */
 
 .container{
-  position: relative;
   padding-top: 75px;
   margin-left: 16%;
   margin-right: 16%;
